<resources>
  <string name="app_name">HackerNewsFirebaseApp</string>
  <string name="title_activity_main2">Main2Activity</string>
  <string name="sign_in">Sign In</string>
  <string name="username">Email</string>
  <string name="password">Password</string>
  <string name="hacker_news">Hacker News</string>
  <string name="hacker_news_mobile">Mobile</string>
  <string name="sign_up_with_email">Sign Up With Email</string>
  <string name="login">LOGIN</string>
  <string name="sign_in_option_title">OR</string>
  <string name="sign_up">SIGN UP</string>
  <string name="all_fields_required">All Fields Are Required</string>
  <string name="user_exists">User Account Exists, Please Select another account</string>
  <string name="please_select_strong_password">Please Select a Stronger Password</string>
  <string name="invalid_user">Either the username or the password is invalid</string>
  <string name="please_sign_up">Please Sign Up to use Hacker News</string>
  <string name="no_hacker_news">No Hacker News</string>
  <string name="no_internet">No Internet Connection</string>

  <string-array name="tabs">
    <item>COMMENTS</item>
    <item>ARTICLE</item>
  </string-array>


  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="error_not_found">Error, Id Not Found</string>
  <string name="logout">LOGOUT</string>
  <string name="top_stories">Top Stories</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="no_internet_please_connect">No Internet Connection, Please Connect to the internet</string>
</resources>
