<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/material_orange"
  android:orientation="vertical"
  android:padding="16dp"
  tools:context="in.co.nikhil.hackernewsfirebaseapp.activity.StoryActivity">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/hacker_news"
    android:textColor="@color/white"
    android:textSize="35sp"
    android:textStyle="bold" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/hacker_news_mobile"
    android:textColor="@color/white"
    android:textSize="30sp" />

  <TextView
    android:id="@+id/finish_sign_in_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:text="@string/sign_in"
    android:textColor="@color/white"
    android:textSize="17sp" />

  <android.support.design.widget.TextInputLayout
    android:id="@+id/login_username_text_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="@android:color/white">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/login_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      android:imeOptions="actionNext"
      android:inputType="textEmailAddress"
      android:maxLines="1"
      android:textColor="@color/white" />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/login_password_text_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:textColorHint="@android:color/white">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:maxLines="1"
      android:textColor="@color/white" />
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/login_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:onClick="checkLogin"
    android:foreground="?attr/selectableItemBackground"
    android:text="@string/login"
    android:textAllCaps="true"
    android:textColor="@color/black" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:gravity="center"
    android:paddingTop="5dp"
    android:text="@string/sign_in_option_title"
    android:textColor="@color/light_gray" />

  <com.google.android.gms.common.SignInButton
    android:id="@+id/sign_in_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="10dp" />

  <Button
    android:id="@+id/login_sign_up_button"
    android:layout_width="180dp"
    android:layout_height="40dp"
    android:layout_gravity="center"
    android:background="@color/web_safe_red"
    android:onClick="signUp"
    android:text="@string/sign_up_with_email"
    android:textColor="@color/white" />

</LinearLayout>